<resources>
    <string name="app_name">Chat</string>
    <string name="enter_email">Ingresar Correo</string>
    <string name="enter_pswd">Ingresar Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="res_psswd">¿Olvidó su contraseña?</string>
    <string name="enter_username">Ingresar Usuario</string>
    <string name="confirm_psswd">Confirmar contraseña</string>
    <string name="signup">Registrar</string>
    <string name="enter_correct_email">Ingrese un correo correctamente</string>
    <string name="password_mismatch">Las contraseñas no coinciden</string>
    <string name="user_created_success">Se ha creado el usuario satisfactoriamente</string>
    <string name="signup_failed">Ha ocurrido un error al crear el usuario : %1$s</string>
    <string name="Registerpls">Registrese </string>
    <string name="Aqui"> Aquí </string>
    <string name="failed_update_profile">Ha fallado el cambio en el perfil : %1$s</string>
    <string name="acces_to_gallery_required">Se requiere acceso a la galeria :c</string>
    <string name="saveProfile">Guardar</string>
    <string name="logOut">Cerrar Sesion</string>
    <string name="change_pic">Cambiar Imagen</string>
    <string name="removePic">Borrar Imagen</string>
    <string name="photo_removed">Se ha eliminado la foto de perfil</string>
    <string name="profile">Perfil</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="password_changed">Se ha cambiado la contraseña exitosamente</string>
    <string name="password_change_error">Ha ocurrido un error : %1$s</string>
    <string name="reset_psswd">Reiniciar Contraseña</string>
    <string name="reset_password_instructions">Se han enviado las instrucciones a su correo : %1$s</string>
    <string name="retry">Reintentar</string>
    <string name="close">Cerrar</string>
    <string name="error_sending_email">Failed to send email : %1$s</string>
    <string name="resend_timer">Resend in : %1$s</string>
    <string name="no_email_found">No se ha encontrado su email en nuestra base de datos. Intente de nuevo</string>
    <string name="loading">Cargando...</string>
    <string name="chk_internet">No hay conexión a internet</string>
    <string name="chat">Chat</string>
    <string name="agregar">Agregar</string>
    <string name="search">Buscar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_chats">No hay chats que mostrar. Empieza una conversación</string>
    <string name="no_friends">Al parecer no tienes amigos agregados. Busca algunos ;)</string>
    <string name="no_friend_requests">Aquí aparecerán las solicitudes</string>
    <string name="Exit_Confirm">Presione \'atras\' otra vez para salir</string>
    <string name="searchfrienderror">Ha ocurrido un problema al buscar usuarios : %1$s</string>
    <string name="errorSendingFriendRequest">Ha ocurrido un error : %1$s</string>
    <string name="accept">Aceptar</string>
    <string name="deny">Denegar</string>
    <string name="request_denied_successfully">Se ha denegado la solicitud</string>
    <string name="failed_to_deny_request">No se ha podido denegar la solicitud : %1$s</string>
    <string name="failed_to_accept_request">No se ha podido aceptar la solicitud : %1$s</string>
    <string name="failed_to_fetch_friend_requests">No se han podido obtener las solicitudes : %1$s</string>
    <string name="failed_to_fetch_chat_list">No se ha podido mostrar los chats : %1$s</string>
    <string name="Enter_message">Ingrese un mensaje</string>
    <string name="failed_to_fetch_friends">No se han encontrado usuarios : %1$s</string>
    <string name="Failed_Message_Send">Ha fallado el envío : %1$s</string>
    <string name="message_sent">Se ha enviado el mensage</string>
</resources>